# tuat-feed-discord

./: .gitignore  flake.nix  main.py  pyproject.toml  url_sample.json  url_sample.py
tuat_feed_discord/: __init__.py  tuat_feed_discord.py
