[tool.poetry]
name = "tuat-feed-discord"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
tuat-feed = "^0.2.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
