[tool.poetry]
name = "tuat-feed-discord"
version = "0.1.0"
description = ""
authors = ["Shogo Takata <peshogo@gmail.com>"]
readme = "README.md"
license = "MIT"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
tuat-feed = "^0.2.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipython = "^8.10.0"

[tool.poetry.scripts]
tuat-feed-discord = "tuat_feed_discord:main"
